# meta

./: .pre-commit-config.yaml  README.md  pyproject.toml
meta/: asgi.py  settings.py  urls.py  wsgi.py
meta/templates/: home.html
