[tool.poetry]
name = "meta"
version = "0.1.0"
description = "Membership management"
authors = ["not7cd <norbert@not7cd.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
Authlib = "^0.15.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
